--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+* {box-sizing: border-box}
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +12,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+#root {
+  display : flex;
+  height : 100vh;
+  flex-direction: column;
 }
