--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,4 +1,17 @@
-.editorWr {position:relative; width:780px; margin:0 auto; padding:100px 90px; border:1px solid #dce2e6; border-radius:8px; background:#fff}
+.editorContainer {position:relative; width:780px; margin:0 auto; padding:100px 90px; border:1px solid #dce2e6; border-radius:8px; background:#fff}
+.editorContainer .editorSave {width:80px; height:40px; font-size:14px; color:#fff; line-height:40px; text-align:center; border:0; border-radius:100px; background:#fb2942}
 
 /* EditorUser */
-.editorUserInfo .editorUserIcon {width:62px; height:62px; border:1px solid #eee; border-radius:31px; background:url("https://media.vingle.net/images/us_l/lws0wuwvbm.jpg"); background-size:100%}
+.editorUserInfo .editorUserIcon,
+.editorUserInfo .editorUserName {display:inline-block; vertical-align:middle} 
+.editorUserInfo .editorUserIcon {width:62px; height:62px; margin-right:15px; border:1px solid #ccc; border-radius:31px; background:url("https://media.vingle.net/images/us_l/lws0wuwvbm.jpg"); background-size:100%}
+.editorUserInfo .editorUserName {font-size:18px}
+
+/* EditorTitle */
+.editorTitle {margin:40px 0 15px}
+.editorTitle .editorTitleInput {overflow-y:hidden; width:100%; height:42px; font-weight:bold; font-size:28px; line-height:32px; border:0; resize:none}
+
+/* EditorContents */
+.editorContents {height:300px}
+.editorContents .editorContentsTextarea {width:100%; height:100%; resize:none; font-size:16px; border:0}
+
