--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ code {
   height : 100vh;
   flex-direction: column;
 }
+input,textarea {padding:5px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;}
+input::placeholder,
+textarea::placeholder {color:#ccc}
