add searchList contents

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App {
   text-align: center;
 }
-.container {height:100%; padding:40px 0; background:#f8fafa}
+.container {padding:40px 0; background:#f8fafa}
