--- a/src/components/SearchList.css
+++ b/src/components/SearchList.css
@@ -1,3 +1,3 @@
 .searchList {width:780px; margin:0 auto}
 
-.searchList .searchCard {width:380px; height:376px; border:1px solid #dce2e6; border-radius:8px; background:#fff}
+.searchList .searchCard {width:380px; height:376px; margin:20px 0; border:1px solid #dce2e6; border-radius:8px; background:#fff}
