--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -12,6 +12,10 @@
 .editorTitle .editorTitleInput {overflow-y:hidden; width:100%; height:42px; font-weight:bold; font-size:28px; line-height:32px; border:0; resize:none}
 
 /* EditorContents */
-.editorContents {height:300px}
+.editorContents {position:relative; height:300px}
 .editorContents .editorContentsTextarea {width:100%; height:100%; resize:none; font-size:16px; border:0}
+.editorContents .editorLeft {position:absolute; top:0; left:-200px}
+.editorContents .editorLeft .editorInputIcon {position:relative}
+.editorContents .editorLeft .editorInputIcon label {display:inline-block; width:50px; height:50px; padding:.5em; font-size:12px; text-align:center; color:#fff; border-radius:50px; cursor:pointer; background:#999}
+.editorContents .editorLeft .editorInputIcon input {position:absolute; overflow:hidden; width:1px; height:1px; padding:0; margin:-1px; border:0}
 
